<resources>
    <string name="app_name">SendStory</string>

    <string name="news">News</string>
    <string name="send">Send</string>
    <string name="cnn">CNN</string>
    <string name="_11_h">11h</string>
    <string name="_09_h">8h</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lorem_latin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="b_lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">\u25A0  Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\u25A0  Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\u25A0  Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\u25A0  Lorem Ipsum is simply dummy text of the printing and typesetting industry. \n\u25A0  Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="highlight">highlight</string>
    <string name="_11_may_2022">11 May 2022</string>
    <string name="summary">Summary :</string>
    <string name="read_full_story">Read Full Story</string>
    <string name="msg_token_fmt">Token:-</string>
    <string name="retry">Retry</string>
    <string name="default_notification_channel_id">Default Channel</string>
    <string name="default_notification_channel_name">Default Name</string>
    <string name="nice_html">
<![CDATA[
<html><head><meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /><style type="text/css">body{font-family: \'-apple-system\',\'HelveticaNeue\';} img{max-width:100%%; padding:0px; margin:0px;} div.newscontent h1{margin-top:18px; margin-bottom:18px; line-height:30px; font-size:25px; color:black;} div.newscontent h2{margin-top:15px; margin-bottom:15px; line-height:24px; font-size:16px; color:black;} div.newscontent h3{margin-top:25px; margin-bottom:25px; line-height:32px; font-size:17px; color:black;} div.newscontent blockquote{margin:15px; border-left:3px solid #eeeeee; color:#666666; font-size:15px; padding-left:25px;} div.newscontent{font-size:16px; line-height:23px; background-color:white;} div.newscontent a{color:#1761F9;} div.newscontent a:hover{color:#666666;} div.newscontent figcaption{color:#888888; font-size:13px; text-align:center;} iframe{background-color:#f9f9f9;} ul{margin:0px; list-style-type: square; padding-left:16px;} li{color:#1761F9; margin-left:0px; padding:0px; padding-left:10px; margin-bottom:8px;} li span{color:black;}</style></head><body style="margin:0px;"><div align="center"><div style="max-width:680px; margin:15px;" align="left" class="newscontent"><h2>Summary:</h2>
%s
</div></div></body></html>
]]>
</string>
    <string name="no_news">No news available</string>
    <string name="share">Share</string>
    <string name="get_the_sendstory_app_for_more">Get the SendStory App for more!</string>


</resources>