<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/ic_tv_back"
        android:padding="@dimen/_4sdp"
        android:text="@string/highlight"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="@id/iv_main"
        app:layout_constraintTop_toTopOf="@id/iv_main" />

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_main"
        app:layout_constraintStart_toStartOf="@id/iv_main"
        app:layout_constraintTop_toBottomOf="@id/iv_main" />

    <ImageView
        android:id="@+id/iv_ch_logo"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_ch_logo"
        app:layout_constraintStart_toStartOf="@id/tv_main"
        app:layout_constraintTop_toBottomOf="@id/tv_main" />

    <TextView
        android:id="@+id/tv_ch_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/cnn"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
        app:layout_constraintStart_toEndOf="@id/iv_ch_logo"
        app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/_11_h"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
        app:layout_constraintStart_toEndOf="@id/tv_ch_name"
        app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

    <ImageView
        android:id="@+id/iv_com_logo"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintEnd_toEndOf="@+id/tv_main"
        app:layout_constraintTop_toTopOf="@+id/tv_time"
        app:tint="@color/grey" />



    <View
        android:id="@+id/v_1"
        android:layout_width="0dp"
        android:layout_height="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/grey_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_ch_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>