<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_165sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_water"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_highlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/ic_tv_back"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/highlight"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@id/iv_main"
                app:layout_constraintTop_toTopOf="@id/iv_main" />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/iv_main"
                app:layout_constraintStart_toStartOf="@id/iv_main"
                app:layout_constraintTop_toBottomOf="@id/iv_main" />

            <ImageView
                android:id="@+id/iv_ch_logo"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_ch_logo"
                app:layout_constraintStart_toStartOf="@id/tv_main"
                app:layout_constraintTop_toBottomOf="@id/tv_main" />

            <TextView
                android:id="@+id/tv_ch_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:text="@string/cnn"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
                app:layout_constraintStart_toEndOf="@id/iv_ch_logo"
                app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:text="@string/_11_h"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
                app:layout_constraintStart_toEndOf="@id/tv_ch_name"
                app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

            <ImageView
                android:id="@+id/iv_com_logo"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:src="@drawable/ic_comment"
                app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
                app:layout_constraintEnd_toStartOf="@id/tv_send"
                app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/send"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
                app:layout_constraintEnd_toEndOf="@id/tv_main"
                app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

            <View
                android:id="@+id/v_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/grey_d"
                app:layout_constraintBottom_toTopOf="@id/rv_main"
                app:layout_constraintTop_toBottomOf="@id/tv_send" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_1"
                tools:listitem="@layout/item_small_list" />

            <View
                android:id="@+id/dim"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:alpha="0"
                android:background="@color/trans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/slider_layout"
                layout="@layout/news_pop_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>