<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            android:background="@drawable/rounded_dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="WebViewLayout">


                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_main"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_water"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius_top_left="@dimen/_24sdp"
                    app:riv_corner_radius_top_right="@dimen/_24sdp" />

                <TextView
                    android:id="@+id/tv_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_main"
                    app:layout_constraintStart_toStartOf="@id/iv_main"
                    app:layout_constraintTop_toBottomOf="@id/iv_main" />

                <ImageView
                    android:id="@+id/iv_ch_logo"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:src="@drawable/ic_ch_logo"
                    app:layout_constraintStart_toStartOf="@id/tv_main"
                    app:layout_constraintTop_toBottomOf="@id/tv_main" />

                <TextView
                    android:id="@+id/tv_ch_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_24sdp"
                    android:text="@string/cnn"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toTopOf="@id/tv_time"
                    app:layout_constraintStart_toEndOf="@id/iv_ch_logo"
                    app:layout_constraintTop_toTopOf="@id/iv_ch_logo" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/_11_may_2022"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_ch_logo"
                    app:layout_constraintStart_toStartOf="@id/tv_ch_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_ch_name" />

                <View
                    android:id="@+id/v_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/grey_d"

                    app:layout_constraintTop_toBottomOf="@+id/tv_time" />


                <WebView
                    android:id="@+id/tv_summary_o"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/v_1" />

                <TextView
                    android:id="@+id/tv_read_full_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16sdp"
                    android:layout_marginVertical="@dimen/_12sdp"
                    android:background="@drawable/ic_tv_back"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/read_full_story"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_summary_o"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary_o" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>